--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "neox-theme",
-  "publisher": "Irere Emmanuel",
+  "publisher": "IrereEmmanuel",
   "displayName": "Neox-Theme",
-  "description": "This is the theme for Neox project when coding it",
+  "description": "Neox Theme is a theme that uses Neox platfrom design systems and colors",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.59.0"
