light theme not happening

--- a/package.json
+++ b/package.json
@@ -20,12 +20,7 @@
       {
         "label": "Neox Dark",
         "uiTheme": "vs-dark",
-        "path": "./themes/NEOX-Dark.json"
-      },
-      {
-        "label": "Neox Light",
-        "uiTheme": "vs-light",
-        "path": "./themes/NEOX-Light.json"
+        "path": "./themes/NEOX-Dark-color-theme.json"
       }
     ]
   }
